antlr4/simple_graph_grammarParser.cpp

// Generated from antlr4/simple_graph_grammar.g4 by ANTLR 4.11.1


#include "simple_graph_grammarListener.h"
#include "simple_graph_grammarVisitor.h"

#include "simple_graph_grammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct Simple_graph_grammarParserStaticData final {
  Simple_graph_grammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Simple_graph_grammarParserStaticData(const Simple_graph_grammarParserStaticData&) = delete;
  Simple_graph_grammarParserStaticData(Simple_graph_grammarParserStaticData&&) = delete;
  Simple_graph_grammarParserStaticData& operator=(const Simple_graph_grammarParserStaticData&) = delete;
  Simple_graph_grammarParserStaticData& operator=(Simple_graph_grammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag simple_graph_grammarParserOnceFlag;
Simple_graph_grammarParserStaticData *simple_graph_grammarParserStaticData = nullptr;

void simple_graph_grammarParserInitialize() {
  assert(simple_graph_grammarParserStaticData == nullptr);
  auto staticData = std::make_unique<Simple_graph_grammarParserStaticData>(
    std::vector<std::string>{
      "all_matches", "node", "centralmatch", "many_edges", "rewrite_to", 
      "rewrite_expr", "test_expr", "test_expr_side", "edge", "edge_joining", 
      "edgelabel", "multiple_labels"
    },
    std::vector<std::string>{
      "", "';'", "'del'", "'new'", "'set'", "'\\U0001D709'", "'@'", "'\\u2113'", 
      "'\\U0001D70B'", "'\\u03C6'", "','", "'label'", "'src'", "'dst'", 
      "'--'", "'->'", "'<-'", "'hook'", "'||'", "'if'", "'then'", "'else'", 
      "'as'", "'>>'", "'\\u21AA'", "'\\u2200'", "'\\u003F'", "'='", "'*'", 
      "'('", "')'", "':'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "IF", "THEN", "ELSE", "AS", "VEC", "REWRITE_TO", "FORALL", 
      "QM", "EQ", "STAR", "LPAR", "RPAR", "COL", "QPAR", "PPAR", "OTHERS", 
      "SPACE", "COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  simple_graph_grammarParserStaticData = staticData.release();
}

}

simple_graph_grammarParser::simple_graph_grammarParser(TokenStream *input) : simple_graph_grammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

simple_graph_grammarParser::simple_graph_grammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  simple_graph_grammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *simple_graph_grammarParserStaticData->atn, simple_graph_grammarParserStaticData->decisionToDFA, simple_graph_grammarParserStaticData->sharedContextCache, options);
}

simple_graph_grammarParser::~simple_graph_grammarParser() {
  delete _interpreter;
}

const atn::ATN& simple_graph_grammarParser::getATN() const {
  return *simple_graph_grammarParserStaticData->atn;
}

std::string simple_graph_grammarParser::getGrammarFileName() const {
  return "simple_graph_grammar.g4";
}

const std::vector<std::string>& simple_graph_grammarParser::getRuleNames() const {
  return simple_graph_grammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& simple_graph_grammarParser::getVocabulary() const {
  return simple_graph_grammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView simple_graph_grammarParser::getSerializedATN() const {
  return simple_graph_grammarParserStaticData->serializedATN;
}


//----------------- All_matchesContext ------------------------------------------------------------------

simple_graph_grammarParser::All_matchesContext::All_matchesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<simple_graph_grammarParser::CentralmatchContext *> simple_graph_grammarParser::All_matchesContext::centralmatch() {
  return getRuleContexts<simple_graph_grammarParser::CentralmatchContext>();
}

simple_graph_grammarParser::CentralmatchContext* simple_graph_grammarParser::All_matchesContext::centralmatch(size_t i) {
  return getRuleContext<simple_graph_grammarParser::CentralmatchContext>(i);
}


size_t simple_graph_grammarParser::All_matchesContext::getRuleIndex() const {
  return simple_graph_grammarParser::RuleAll_matches;
}

void simple_graph_grammarParser::All_matchesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAll_matches(this);
}

void simple_graph_grammarParser::All_matchesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAll_matches(this);
}


std::any simple_graph_grammarParser::All_matchesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitAll_matches(this);
  else
    return visitor->visitChildren(this);
}

simple_graph_grammarParser::All_matchesContext* simple_graph_grammarParser::all_matches() {
  All_matchesContext *_localctx = _tracker.createInstance<All_matchesContext>(_ctx, getState());
  enterRule(_localctx, 0, simple_graph_grammarParser::RuleAll_matches);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(29);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(24);
        centralmatch();
        setState(25);
        match(simple_graph_grammarParser::T__0); 
      }
      setState(31);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(32);
    centralmatch();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NodeContext ------------------------------------------------------------------

simple_graph_grammarParser::NodeContext::NodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* simple_graph_grammarParser::NodeContext::LPAR() {
  return getToken(simple_graph_grammarParser::LPAR, 0);
}

tree::TerminalNode* simple_graph_grammarParser::NodeContext::RPAR() {
  return getToken(simple_graph_grammarParser::RPAR, 0);
}

simple_graph_grammarParser::Multiple_labelsContext* simple_graph_grammarParser::NodeContext::multiple_labels() {
  return getRuleContext<simple_graph_grammarParser::Multiple_labelsContext>(0);
}

tree::TerminalNode* simple_graph_grammarParser::NodeContext::STAR() {
  return getToken(simple_graph_grammarParser::STAR, 0);
}

tree::TerminalNode* simple_graph_grammarParser::NodeContext::VEC() {
  return getToken(simple_graph_grammarParser::VEC, 0);
}

tree::TerminalNode* simple_graph_grammarParser::NodeContext::COL() {
  return getToken(simple_graph_grammarParser::COL, 0);
}

tree::TerminalNode* simple_graph_grammarParser::NodeContext::OTHERS() {
  return getToken(simple_graph_grammarParser::OTHERS, 0);
}


size_t simple_graph_grammarParser::NodeContext::getRuleIndex() const {
  return simple_graph_grammarParser::RuleNode;
}

void simple_graph_grammarParser::NodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNode(this);
}

void simple_graph_grammarParser::NodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNode(this);
}


std::any simple_graph_grammarParser::NodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitNode(this);
  else
    return visitor->visitChildren(this);
}

simple_graph_grammarParser::NodeContext* simple_graph_grammarParser::node() {
  NodeContext *_localctx = _tracker.createInstance<NodeContext>(_ctx, getState());
  enterRule(_localctx, 2, simple_graph_grammarParser::RuleNode);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    match(simple_graph_grammarParser::LPAR);
    setState(36);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == simple_graph_grammarParser::STAR) {
      setState(35);
      match(simple_graph_grammarParser::STAR);
    }
    setState(39);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == simple_graph_grammarParser::VEC) {
      setState(38);
      match(simple_graph_grammarParser::VEC);
    }
    setState(41);
    antlrcpp::downCast<NodeContext *>(_localctx)->var = multiple_labels();
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == simple_graph_grammarParser::COL) {
      setState(42);
      match(simple_graph_grammarParser::COL);
      setState(43);
      match(simple_graph_grammarParser::OTHERS);
    }
    setState(46);
    match(simple_graph_grammarParser::RPAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CentralmatchContext ------------------------------------------------------------------

simple_graph_grammarParser::CentralmatchContext::CentralmatchContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* simple_graph_grammarParser::CentralmatchContext::EQ() {
  return getToken(simple_graph_grammarParser::EQ, 0);
}

tree::TerminalNode* simple_graph_grammarParser::CentralmatchContext::OTHERS() {
  return getToken(simple_graph_grammarParser::OTHERS, 0);
}

std::vector<simple_graph_grammarParser::NodeContext *> simple_graph_grammarParser::CentralmatchContext::node() {
  return getRuleContexts<simple_graph_grammarParser::NodeContext>();
}

simple_graph_grammarParser::NodeContext* simple_graph_grammarParser::CentralmatchContext::node(size_t i) {
  return getRuleContext<simple_graph_grammarParser::NodeContext>(i);
}

std::vector<simple_graph_grammarParser::Edge_joiningContext *> simple_graph_grammarParser::CentralmatchContext::edge_joining() {
  return getRuleContexts<simple_graph_grammarParser::Edge_joiningContext>();
}

simple_graph_grammarParser::Edge_joiningContext* simple_graph_grammarParser::CentralmatchContext::edge_joining(size_t i) {
  return getRuleContext<simple_graph_grammarParser::Edge_joiningContext>(i);
}

tree::TerminalNode* simple_graph_grammarParser::CentralmatchContext::REWRITE_TO() {
  return getToken(simple_graph_grammarParser::REWRITE_TO, 0);
}

std::vector<simple_graph_grammarParser::Many_edgesContext *> simple_graph_grammarParser::CentralmatchContext::many_edges() {
  return getRuleContexts<simple_graph_grammarParser::Many_edgesContext>();
}

simple_graph_grammarParser::Many_edgesContext* simple_graph_grammarParser::CentralmatchContext::many_edges(size_t i) {
  return getRuleContext<simple_graph_grammarParser::Many_edgesContext>(i);
}

std::vector<simple_graph_grammarParser::Rewrite_toContext *> simple_graph_grammarParser::CentralmatchContext::rewrite_to() {
  return getRuleContexts<simple_graph_grammarParser::Rewrite_toContext>();
}

simple_graph_grammarParser::Rewrite_toContext* simple_graph_grammarParser::CentralmatchContext::rewrite_to(size_t i) {
  return getRuleContext<simple_graph_grammarParser::Rewrite_toContext>(i);
}


size_t simple_graph_grammarParser::CentralmatchContext::getRuleIndex() const {
  return simple_graph_grammarParser::RuleCentralmatch;
}

void simple_graph_grammarParser::CentralmatchContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCentralmatch(this);
}

void simple_graph_grammarParser::CentralmatchContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCentralmatch(this);
}


std::any simple_graph_grammarParser::CentralmatchContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitCentralmatch(this);
  else
    return visitor->visitChildren(this);
}

simple_graph_grammarParser::CentralmatchContext* simple_graph_grammarParser::centralmatch() {
  CentralmatchContext *_localctx = _tracker.createInstance<CentralmatchContext>(_ctx, getState());
  enterRule(_localctx, 4, simple_graph_grammarParser::RuleCentralmatch);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    antlrcpp::downCast<CentralmatchContext *>(_localctx)->var = match(simple_graph_grammarParser::OTHERS);
    setState(49);
    match(simple_graph_grammarParser::EQ);
    setState(50);
    antlrcpp::downCast<CentralmatchContext *>(_localctx)->src = node();
    setState(52);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == simple_graph_grammarParser::T__13

    || _la == simple_graph_grammarParser::T__15) {
      setState(51);
      antlrcpp::downCast<CentralmatchContext *>(_localctx)->e1 = many_edges();
    }
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == simple_graph_grammarParser::LPAR) {
      setState(54);
      edge_joining();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == simple_graph_grammarParser::REWRITE_TO) {
      setState(60);
      match(simple_graph_grammarParser::REWRITE_TO);
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 28) != 0) {
        setState(61);
        rewrite_to();
        setState(66);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(67);
      antlrcpp::downCast<CentralmatchContext *>(_localctx)->dst = node();
      setState(69);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == simple_graph_grammarParser::T__13

      || _la == simple_graph_grammarParser::T__15) {
        setState(68);
        antlrcpp::downCast<CentralmatchContext *>(_localctx)->e2 = many_edges();
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Many_edgesContext ------------------------------------------------------------------

simple_graph_grammarParser::Many_edgesContext::Many_edgesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<simple_graph_grammarParser::EdgeContext *> simple_graph_grammarParser::Many_edgesContext::edge() {
  return getRuleContexts<simple_graph_grammarParser::EdgeContext>();
}

simple_graph_grammarParser::EdgeContext* simple_graph_grammarParser::Many_edgesContext::edge(size_t i) {
  return getRuleContext<simple_graph_grammarParser::EdgeContext>(i);
}


size_t simple_graph_grammarParser::Many_edgesContext::getRuleIndex() const {
  return simple_graph_grammarParser::RuleMany_edges;
}

void simple_graph_grammarParser::Many_edgesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMany_edges(this);
}

void simple_graph_grammarParser::Many_edgesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMany_edges(this);
}


std::any simple_graph_grammarParser::Many_edgesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitMany_edges(this);
  else
    return visitor->visitChildren(this);
}

simple_graph_grammarParser::Many_edgesContext* simple_graph_grammarParser::many_edges() {
  Many_edgesContext *_localctx = _tracker.createInstance<Many_edgesContext>(_ctx, getState());
  enterRule(_localctx, 6, simple_graph_grammarParser::RuleMany_edges);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(73);
      edge();
      setState(76); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == simple_graph_grammarParser::T__13

    || _la == simple_graph_grammarParser::T__15);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rewrite_toContext ------------------------------------------------------------------

simple_graph_grammarParser::Rewrite_toContext::Rewrite_toContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t simple_graph_grammarParser::Rewrite_toContext::getRuleIndex() const {
  return simple_graph_grammarParser::RuleRewrite_to;
}

void simple_graph_grammarParser::Rewrite_toContext::copyFrom(Rewrite_toContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Del_node_or_edgeContext ------------------------------------------------------------------

tree::TerminalNode* simple_graph_grammarParser::Del_node_or_edgeContext::OTHERS() {
  return getToken(simple_graph_grammarParser::OTHERS, 0);
}

simple_graph_grammarParser::Del_node_or_edgeContext::Del_node_or_edgeContext(Rewrite_toContext *ctx) { copyFrom(ctx); }

void simple_graph_grammarParser::Del_node_or_edgeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDel_node_or_edge(this);
}
void simple_graph_grammarParser::Del_node_or_edgeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDel_node_or_edge(this);
}

std::any simple_graph_grammarParser::Del_node_or_edgeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitDel_node_or_edge(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Update_exprContext ------------------------------------------------------------------

tree::TerminalNode* simple_graph_grammarParser::Update_exprContext::AS() {
  return getToken(simple_graph_grammarParser::AS, 0);
}

std::vector<simple_graph_grammarParser::Rewrite_exprContext *> simple_graph_grammarParser::Update_exprContext::rewrite_expr() {
  return getRuleContexts<simple_graph_grammarParser::Rewrite_exprContext>();
}

simple_graph_grammarParser::Rewrite_exprContext* simple_graph_grammarParser::Update_exprContext::rewrite_expr(size_t i) {
  return getRuleContext<simple_graph_grammarParser::Rewrite_exprContext>(i);
}

simple_graph_grammarParser::Update_exprContext::Update_exprContext(Rewrite_toContext *ctx) { copyFrom(ctx); }

void simple_graph_grammarParser::Update_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUpdate_expr(this);
}
void simple_graph_grammarParser::Update_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUpdate_expr(this);
}

std::any simple_graph_grammarParser::Update_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitUpdate_expr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Neu_objContext ------------------------------------------------------------------

tree::TerminalNode* simple_graph_grammarParser::Neu_objContext::OTHERS() {
  return getToken(simple_graph_grammarParser::OTHERS, 0);
}

simple_graph_grammarParser::Neu_objContext::Neu_objContext(Rewrite_toContext *ctx) { copyFrom(ctx); }

void simple_graph_grammarParser::Neu_objContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNeu_obj(this);
}
void simple_graph_grammarParser::Neu_objContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNeu_obj(this);
}

std::any simple_graph_grammarParser::Neu_objContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitNeu_obj(this);
  else
    return visitor->visitChildren(this);
}
simple_graph_grammarParser::Rewrite_toContext* simple_graph_grammarParser::rewrite_to() {
  Rewrite_toContext *_localctx = _tracker.createInstance<Rewrite_toContext>(_ctx, getState());
  enterRule(_localctx, 8, simple_graph_grammarParser::RuleRewrite_to);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case simple_graph_grammarParser::T__1: {
        _localctx = _tracker.createInstance<simple_graph_grammarParser::Del_node_or_edgeContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(78);
        match(simple_graph_grammarParser::T__1);
        setState(79);
        match(simple_graph_grammarParser::OTHERS);
        break;
      }

      case simple_graph_grammarParser::T__2: {
        _localctx = _tracker.createInstance<simple_graph_grammarParser::Neu_objContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(80);
        match(simple_graph_grammarParser::T__2);
        setState(81);
        antlrcpp::downCast<Neu_objContext *>(_localctx)->dst = match(simple_graph_grammarParser::OTHERS);
        break;
      }

      case simple_graph_grammarParser::T__3: {
        _localctx = _tracker.createInstance<simple_graph_grammarParser::Update_exprContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(82);
        match(simple_graph_grammarParser::T__3);
        setState(83);
        antlrcpp::downCast<Update_exprContext *>(_localctx)->to = rewrite_expr();
        setState(84);
        match(simple_graph_grammarParser::AS);
        setState(85);
        antlrcpp::downCast<Update_exprContext *>(_localctx)->from = rewrite_expr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Rewrite_exprContext ------------------------------------------------------------------

simple_graph_grammarParser::Rewrite_exprContext::Rewrite_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t simple_graph_grammarParser::Rewrite_exprContext::getRuleIndex() const {
  return simple_graph_grammarParser::RuleRewrite_expr;
}

void simple_graph_grammarParser::Rewrite_exprContext::copyFrom(Rewrite_exprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Node_containmentContext ------------------------------------------------------------------

tree::TerminalNode* simple_graph_grammarParser::Node_containmentContext::OTHERS() {
  return getToken(simple_graph_grammarParser::OTHERS, 0);
}

simple_graph_grammarParser::Rewrite_exprContext* simple_graph_grammarParser::Node_containmentContext::rewrite_expr() {
  return getRuleContext<simple_graph_grammarParser::Rewrite_exprContext>(0);
}

simple_graph_grammarParser::Node_containmentContext::Node_containmentContext(Rewrite_exprContext *ctx) { copyFrom(ctx); }

void simple_graph_grammarParser::Node_containmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNode_containment(this);
}
void simple_graph_grammarParser::Node_containmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNode_containment(this);
}

std::any simple_graph_grammarParser::Node_containmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitNode_containment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Node_propContext ------------------------------------------------------------------

std::vector<simple_graph_grammarParser::Rewrite_exprContext *> simple_graph_grammarParser::Node_propContext::rewrite_expr() {
  return getRuleContexts<simple_graph_grammarParser::Rewrite_exprContext>();
}

simple_graph_grammarParser::Rewrite_exprContext* simple_graph_grammarParser::Node_propContext::rewrite_expr(size_t i) {
  return getRuleContext<simple_graph_grammarParser::Rewrite_exprContext>(i);
}

simple_graph_grammarParser::Node_propContext::Node_propContext(Rewrite_exprContext *ctx) { copyFrom(ctx); }

void simple_graph_grammarParser::Node_propContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNode_prop(this);
}
void simple_graph_grammarParser::Node_propContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<simple_graph_grammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNode_prop(this);
}

std::any simple_graph_grammarParser::Node_propContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<simple_graph_grammarVisitor*>(visitor))
    return parserVisitor->visitNode_prop(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Ifte_exprContext ------------------------------------------------------------------

tree::TerminalNode* simple_graph_grammarParser::Ifte_exprContext::IF() {
  return getToken(simple_graph_grammarParser::IF, 0);
}

tree::TerminalNode* simple_graph_grammarParser::Ifte_exprContext::LPAR() {
  return getToken(simple_graph_grammarParser::LPAR, 0);
}

tree::TerminalNode* simple_graph_grammarParser::Ifte_exprContext::RPAR() {
  return getToken(simple_graph_grammarParser::RPAR, 0);
}

tree::TerminalNode* simple_graph_grammarParser::Ifte_exprContext::THEN() {
  return getToken(simple_graph_grammarParser::THEN, 0);
}

simple_graph_grammarParser::Test_exprContext* simple_graph_grammarParser::Ifte_exprContext::test_expr() {
  return getRuleContext<simple_graph_grammarParser::Test_exprContext>(0);
}

std::vector<simple_graph_grammarParser::Rewrite_exprContext *> simple_graph_grammarParser::Ifte_exprContext::rewrite_expr() {
  return getRuleContexts<simple_graph_grammarParser::Rewrite_exprContext>();
}
